Implemented logic for creating fridges and adding/removing items
